--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-admin-template",
-  "version": "3.0.0",
+  "version": "3.6.0",
   "license": "MIT",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
   "author": "Pan <panfree23@gmail.com>",
@@ -52,6 +52,7 @@
     "portfinder": "1.0.13",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.9",
+    "postcss-url": "7.3.0",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "semver": "5.4.1",
