路由懒加载

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "vue-admin-template",
-  "version": "3.6.0",
+  "name": "pet-admin",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "author": "qingsongchong",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "node build/build.js",
-    "build:report": "npm_config_report=true node build/build.js",
+    "dev": "cross-env BABEL_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
+    "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
     "lint": "eslint --ext .js,.vue src",
     "test": "npm run lint"
   },
   "dependencies": {
+    "ali-oss": "^5.3.0",
     "axios": "0.17.1",
     "babel-polyfill": "^6.26.0",
-    "element-ui": "2.3.4",
+    "element-ui": "2.3.5",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -29,6 +29,7 @@
     "babel-eslint": "8.0.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
@@ -36,6 +37,7 @@
     "babel-preset-stage-2": "6.24.1",
     "chalk": "2.3.0",
     "copy-webpack-plugin": "4.2.3",
+    "cross-env": "^5.2.0",
     "css-loader": "0.28.7",
     "eslint": "4.13.1",
     "eslint-friendly-formatter": "3.0.0",
